--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="twitter:card" content="summary">
-        <meta name="og:url" content="https://loona2jin.github.io/">
+        <meta name="og:url" content="https://loona2jin.github.io/2019result/">
         <meta name="og:title" content="투진어워즈">
         <meta name="og:description" content="2016-2019 빛나는 투진을 확인해주세요">
-        <meta name="og:image" content="https://loona2jin.github.io/images/meta_image.jpg">
+        <meta name="og:image" content="https://loona2jin.github.io/2019result/img/logo.jpg">
         <script src="js/jquery-3.4.1.min.js"></script>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="js/data.js"></script>
