--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
                 <span class="title">2JIN AWARD</span>
             </h1>
             <p class="scroll-button" onClick="$('.post-wrapper .post:first-child .stem-overlay .icon').click();">♥</p>
+		<br>
+            <a href="https://youtu.be/6InVbgrvNK4" target="_blank"><p style="cursor: pointer">베스트 투진 영상 보러가기</p></a>
         </section>
         <div class="desc">
             <p>2016 - 2019 Heejin & Hyunjin<br>
             <br>
             조사기간: 2019.12.24~2019.12.30<br>
             참여인원: 199명<br>
-            집계표: 2,258표(123명 x 6표, 76명 x 20표)</p>
+            총 투표수: 2,258표(123명 x 6표, 76명 x 20표)</p>
         </div>
     </header>
 
