--- a/index.html
+++ b/index.html
@@ -866,7 +866,7 @@
                 class="video-js vjs-theme-forest"
                 controls
               >
-                <source src="https://video.twimg.com/ext_tw_video/1213432142882959360/pr/pl/424x240/pKLxNjPdS6Ur4xXh.m3u8" type="application/x-mpegURL" />/>
+                <source src="http://d3dz27bqndokob.cloudfront.net/M012013442PPV00MB108.m3u8?AdaptiveType=HLS" type="application/vnd.apple.mpegurl" />
                 <p class="vjs-no-js">
                   To view this video please enable JavaScript, and consider upgrading to a
                   web browser that
